--- a/CSS_PROFILE.css
+++ b/CSS_PROFILE.css
@@ -182,6 +182,14 @@ img
     filter: drop-shadow(0 0 16px #da2063);
 }
 
+.logo:focus
+{
+    -webkit-transition: .5s ease;
+            transition: .5s ease;
+
+    fill: #fff;
+}
+
 .icons
 {
     -webkit-transition: .5s ease;
