--- a/CSS_PROFILE.css
+++ b/CSS_PROFILE.css
@@ -144,11 +144,46 @@ img
 
 
 
+#form{
+    max-width: 642px;
+    height: 745px;
+    max-height: 745px;
+    outline: 3px solid white;
+}
+
+.input{
+    color: #da2063;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 12px;
+}
+
+input, textarea{
+    padding-top: 9px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+
+input, textarea{
+    width: 442px;
+
+}
 
 
 
-
-
+.form_content{
+    max-width: 482px;
+    position: relative; top: 40px; left: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    gap: 24px;
+}
 
 
 .logo
