--- a/CSS_PROFILE.css
+++ b/CSS_PROFILE.css
@@ -849,6 +849,7 @@ main
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
+    word-wrap: break-word;
 }
 
 .services h1:hover{
@@ -861,6 +862,7 @@ main
     margin-bottom: 0;
 
     letter-spacing: .07em;
+    word-wrap: break-word;
 
     -webkit-text-stroke: 1px #da2063;
     -webkit-text-fill-color: rgba(0,0,0,0);
